--- a/CourseDesk/Views/Student/GoToBag.cshtml
+++ b/CourseDesk/Views/Student/GoToBag.cshtml
@@ -26,7 +26,7 @@
                             <h6>@item.Course.Price</h6>
                         </td>
                         <td>
-                            <a class="btn btn-danger" asp-controller="CartItems" asp-action="RemoveFromCart" asp-route-id="@item.Id">Remove</a>
+                            <a class="btn btn-danger" asp-controller="Carts" asp-action="RemoveFromCart" asp-route-id="@item.Id">Remove</a>
                         </td>
                     </tr>
                 }
