--- a/CourseDesk/Views/Home/Index.cshtml
+++ b/CourseDesk/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-12" style="align-items:flex-start;">
             <span style="font-size:35px;  "><strong>Update your Skills without Limits</strong></span><br />
-            <div><h4 style="text-decoration-color:black;">@Html.ActionLink("Explore Courses","Index","CourseMaterials")</h4></div>
+            <div><h4 style="text-decoration-color:black;">@Html.ActionLink("Explore Courses","AllCourses","CourseMaterials")</h4></div>
         </div>
     </div>
 </div>
